# red-app

./: Cargo.toml  README.md
front/: package-lock.json  package.json
front/src/: App.tsx  PriceViewer.tsx  main.ts  main2.ts  utils.ts
src/: main.rs
