[package]
name = "red-app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
solana-client = "2.0"
solana-sdk = "2.0"
axum = "0.8.0"
hyper = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }

tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
